--- a/src/layout/header/header.css
+++ b/src/layout/header/header.css
@@ -4,6 +4,7 @@
 
 .header-container {
     display: flex;
+    overflow-x: hidden;
     justify-content: space-between;
     align-items: center;
     padding: 1.2% 10%;
@@ -30,6 +31,7 @@
 }
 
 .menu {
+    overflow-x: hidden;
     display: flex;
     align-items: center;
     justify-content: space-between;
